--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.js"></script>
   <style>
     body {
-      background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+      background-image: linear-gradient(-225deg, #7DE2FC 0%, #B9B6E5 100%);
     }
 
     @keyframes gradient {
@@ -27,12 +27,16 @@
     }
 
     #my-container {
-      height: 100vh;
+      height: 100%;
       width: 100%;
     }
 
     .button {
       background-color: transparent !important;
+    }
+
+    .grid {
+      margin: 0px !important;
     }
   </style>
 </head>
